--- a/manifest.json
+++ b/manifest.json
@@ -27,7 +27,7 @@
 	"content_scripts": [
 		{
 		  "matches": ["http://*.ivorytower.com/*"],
-		  "js": ["jquery-2.1.3.min.js", "cohort-year-adder.js", "shortcuts.js"]
+		  "js": ["jquery-2.1.3.min.js", "cohort-year-adder.js", "emoticon-adder.js", "shortcuts.js"]
 		}
 	],
 	"manifest_version": 2
