--- a/manifest.json
+++ b/manifest.json
@@ -29,7 +29,7 @@
 	},
 	"content_scripts": [
 		{
-		  "matches": ["http://*.ivorytower.com/*"],
+		  "matches": ["https://*.ivorytower.com/*"],
 		  "js": [
 			  "/lib/jquery-2.1.3.min.js",
 			  "/scripts/core.js",
