--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"name": "IvoryTower Checker",
 	"short_name": "IT Check",
 	"author": "Cody Jung, Eric Clymer, Andrew Herold",
-	"version": "1.4.5",
+	"version": "1.5.0",
 	"description": "Checks IvoryTower for unread threads, adds misc other functionality.",
 	"icons": {
 		"48": "/assets/icon48.png",
@@ -22,21 +22,25 @@
 	"options_page": "/options/options.html",
 	"background": {
 		"scripts": [
-			"/lib/jquery-2.1.3.min.js", 
-			"/scripts/core.js", 
-			"/background.js"],
+			"/lib/jquery-2.1.3.min.js",
+			"/scripts/core.js",
+			"/background.js"
+		],
 		"persistent": false
 	},
-	"content_scripts": [
-		{
-		  "matches": ["https://*.ivorytower.com/*"],
-		  "js": [
-			  "/lib/jquery-2.1.3.min.js",
-			  "/scripts/core.js",
-			  "/scripts/cohort-year-adder.js", 
-			  "/scripts/emoticon-adder.js", 
-			  "/scripts/shortcuts.js"]
-		}
+	"content_scripts": [{
+		"matches": ["https://*.ivorytower.com/*"],
+		"js": [
+			"/lib/jquery-2.1.3.min.js",
+			"/scripts/core.js",
+			"/scripts/cohort-year-adder.js",
+			"/scripts/emoticon-adder.js",
+			"/scripts/shortcuts.js"
+		]
+	}],
+
+	"web_accessible_resources": [
+		"/options/options.html"
 	],
 	"manifest_version": 2
 }
